# tiny-recursive-model

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  train_arc.py  train_arithmetic.py  train_maze.py
examples/: custom_task_template.py
tests/: __init__.py  test_trm.py
tiny_recursive_model/: __init__.py  __main__.py  cli.py  config.py  demo.py  model.py  py.typed  trainer.py
tiny_recursive_model/data/: __init__.py  arc.py  arithmetic.py  base.py  maze.py  sudoku.py
tiny_recursive_model/tasks/: __init__.py
tiny_recursive_model/utils/: __init__.py
